fix: add missing background-size property to sign-up-section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -119,6 +119,7 @@ header .mobile {
 #sign-up-section {
   background-image: url(../../resources/images/banner-landingpage.jpg);
   background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
